--- a/Frontend/sepsis Frontend/src/app/components/sidebar.component.scss
+++ b/Frontend/sepsis Frontend/src/app/components/sidebar.component.scss
@@ -184,7 +184,8 @@
 }
 .vital-item dt {
   color: #6b7280;
-  font-size: 12px;
+  font-size: 18px;
+  font-weight: bold;
 }
 .vital-item dd {
   color: #111827;
