--- a/Frontend/sepsis Frontend/src/app/components/sidebar.component.html
+++ b/Frontend/sepsis Frontend/src/app/components/sidebar.component.html
@@ -7,18 +7,21 @@
       </mat-card>
       <!-- Card NOTAS -->
 
+      @if(pacientes.length){
       <mat-card class="sidebar-tile risk-tile alto">
         <div class="chip alto">ALTO</div>
-        <div class="risk-count">23 pacientes</div>
+        <div class="risk-count">{{ filtrarPorRiesgo('ALTO').length }} pacientes</div>
       </mat-card>
       <mat-card class="sidebar-tile risk-tile medio">
         <div class="chip medio">MEDIO</div>
-        <div class="risk-count">78 pacientes</div>
+        <div class="risk-count">{{ filtrarPorRiesgo('MEDIO').length }} pacientes</div>
       </mat-card>
       <mat-card class="sidebar-tile risk-tile bajo">
         <div class="chip bajo">BAJO</div>
-        <div class="risk-count">156 pacientes</div>
+        <div class="risk-count">{{ filtrarPorRiesgo('BAJO').length }} pacientes</div>
       </mat-card>
+      }
+
       <mat-card class="sidebar-tile tasa-tile">
         <div class="tile-title">Tasa de alertas</div>
         <div class="tile-value">
@@ -137,9 +140,12 @@
             <td mat-cell *matCellDef="let paciente">
               <div class="signos-chips">
                 <ng-container *ngFor="let signo of paciente.signos">
-                  <span [ngClass]="'chip-signo chip-' + signo.tipo" tabindex="0">{{
-                    signo.label
-                  }}</span>
+                  <span
+                    *ngIf="signo.value"
+                    [ngClass]="'chip-signo chip-' + signo.tipo"
+                    tabindex="0"
+                    >{{ signo.label }}</span
+                  >
                 </ng-container>
               </div>
             </td>
@@ -198,8 +204,8 @@
       <div class="paciente-main">
         <mat-card class="paciente-card">
           <div class="paciente-header">
-            <span class="paciente-title">Paciente 00432</span>
-            <span class="badge-sepsis" tabindex="0">SEPSIS</span>
+            <span class="paciente-title">Paciente {{pacienteSeleccionado?.id}}</span>
+            <span class="badge-sepsis" *ngIf="pacienteSeleccionado?.pred" tabindex="0">SEPSIS</span>
           </div>
           <div class="paciente-chart-area">
             <svg
