Adjust small issues in front and add explanations for additional Make functions

--- a/front/src/app/components/sidebar.component.html
+++ b/front/src/app/components/sidebar.component.html
@@ -45,6 +45,7 @@
         <mat-option value="2">Turno 2</mat-option>
         <mat-option value="3">Turno 3</mat-option>
         <mat-option value="4">Turno 4</mat-option>
+        <mat-option value="4">Turno 5</mat-option>
       </mat-select>
     </mat-form-field>
     <app-umbrales-operativos></app-umbrales-operativos>
